--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
             <div class="quadrant">
                 <head>Input Matrix</head>
+                <head>Key: </head><span id = "key">please wait!</span>
                 <div class="outer">
                     <div id="q0" class="inner"></div>
                     <div id="q1" class="inner"></div>
@@ -52,7 +53,7 @@
             <div class="social-media">
                 <p>We are RNXGians</p>
                 <p>Shri Guru Gobind Singhji Institute of Engineering and Technology, Vishnupuri, Nanded-431506</p>
-                <img src="images-removebg-preview.png" alt="">
+                <img src="sggs_logo" alt="SGGSIE&T">
             </div>
         </div>
     </div>
