table-links commit-6

--- a/index.html
+++ b/index.html
@@ -22,14 +22,20 @@
         </div>
         <div class="hero">
             <div class="team-info">
-                <p class="simple-text">Team: </p>
-                <h3 class="bulleted"><!--Team name here--></h3>
-                <p class="simple-text">Team ID: </p>
-                <h3 class="bulleted"><!--Team name here--></h3>
-                <p class="simple-text">Team Leader: </p>
-                <h2 class="bulleted"><!--Team leaders Name here--></h2>
-                <p class="simple-text">From: </p>
-                <img src="rnxg-logo.png" alt="">
+               <table style="width: 98%">
+                    <tr>
+                        <td class="right-row"> <p class="simple-text">Team: </p></td>
+                        <td><p class="bulleted">10239</p></td>
+                    </tr>
+                    <tr>
+                        <td class="right-row"><p class="simple-text">Team ID: </p></td>
+                        <td><p class="bulleted">10239</p></td>
+                    </tr>
+                    <tr>
+                        <td class="right-row"> <p class="simple-text">From: </p></td>
+                    </tr>
+                </table>
+                <a href="https://www.rnxg.co.in/"><img src="rnxg-logo.png" alt="RNXG"></a>
             </div>
 
             <div class="quadrant">
@@ -53,7 +59,7 @@
             <div class="social-media">
                 <p>We are RNXGians</p>
                 <p>Shri Guru Gobind Singhji Institute of Engineering and Technology, Vishnupuri, Nanded-431506</p>
-                <img src="sggs_logo" alt="SGGSIE&T">
+                <a href="https://sggs.ac.in/"><img src="sggs_logo" alt="SGGSIE&T"></a>
             </div>
         </div>
     </div>
