--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         </div>
         <div class="hero">
             <div class="team-info">
-               <table style="width: 98%">
+               <table>
                     <tr>
                         <td class="right-row"> <p class="simple-text">Team: </p></td>
-                        <td><p class="bulleted">10239</p></td>
+                        <td><p class="bulleted">Operation Kriti</p></td>
                     </tr>
                     <tr>
                         <td class="right-row"><p class="simple-text">Team ID: </p></td>
@@ -35,7 +35,7 @@
                         <td class="right-row"> <p class="simple-text">From: </p></td>
                     </tr>
                 </table>
-                <a href="https://www.rnxg.co.in/"><img src="rnxg-logo.png" alt="RNXG"></a>
+                <a href="https://www.rnxg.co.in/" ><img src="rnxg.png" alt="RNXG"></a>
             </div>
 
             <div class="quadrant">
@@ -59,7 +59,7 @@
             <div class="social-media">
                 <p>We are RNXGians</p>
                 <p>Shri Guru Gobind Singhji Institute of Engineering and Technology, Vishnupuri, Nanded-431506</p>
-                <a href="https://sggs.ac.in/"><img src="sggs_logo" alt="SGGSIE&T"></a>
+                <a href="https://sggs.ac.in/"><img src="sggs_logo.png" alt="SGGSIE&T"></a>
             </div>
         </div>
     </div>
